--- a/styles.scss
+++ b/styles.scss
@@ -3,145 +3,132 @@
 @import 'colors';
 @import 'layout';
 
-// Border radius
+// Border radius values
 $br-sm: 0.25rem;
 $br-md: 0.5rem;
 $br-lg: 0.75rem;
 $br-xl: 1rem;
 
-// Extend
-%component-size {
-    height: 3rem;
-    width: 100%;
-}
-
-%component-elements {
-    border-radius: $br-sm;
-    font-family: inherit;
-    font-size: inherit; 
-}
-
-%input-elements {
-    background-color: $grey50;
-    border: none;
-    padding: 0 $sp-4;
-    text-align: right;
-    caret-color: $green400;
-}
-
 // Content
 main {
-    background-color: $white;
-    border-top-left-radius: $sp-5;
-    border-top-right-radius: $sp-5;
-    padding: $sp-5;
-    display: flex;
-    flex-direction: row;
-}
-
-h1 {
-    color: $green900;
-    font-size: $fs-xl;
-    letter-spacing: $sp-3;
-    padding: $sp-6;
-    text-align: center;
-}
-
-.label-heading {
-    color: $grey500;
-    font-size: $fs-sm;
+  background-color: $white;
+  border-top-left-radius: $sp-5;
+  border-top-right-radius: $sp-5;
+  display: flex;
+  flex-direction: row;
+  padding: $sp-5;
 }
 
 #calculator { gap: $sp-4; }
 #input-container { gap: $sp-5; padding: $sp-2; }
 
-// INPUT FIELDS
+h1 {
+  color: $green900;
+  font-size: $fs-xl;
+  letter-spacing: $sp-3;
+  padding: $sp-6;
+  text-align: center;
+}
+
+.label-row {
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.label-heading { color: $grey500; font-size: $fs-sm; }
+.error-message { color: $red; font-size: $fs-sm; }
+.section { gap: $sp-2; }
+
+// Extend
+%component-elements {
+  border-radius: $br-sm;
+  font-family: inherit;
+  font-size: inherit; 
+  height: 3rem;
+  width: 100%;
+}
+
+%input-elements {
+  background-color: $grey50;
+  border: none;
+  caret-color: $green400;
+  color: $green900;
+  padding: $sp-0 $sp-4;
+  text-align: right;
+}
+
+// Input fields
 .input-field {
-    display: inline-block;
-    position: relative;
-    width: 100%
+  display: inline-block;
+  position: relative;
+  width: 100%
 }
 
 .input-field svg {
-    left: $sp-5;
-    pointer-events: none;
-    position: absolute;
-    top: 30%;
-    transform: translate(-50%);
+  left: $sp-5;
+  pointer-events: none;
+  position: absolute;
+  top: 30%;
+  transform: translate(-50%);
 }
 
-input {
-    @extend %component-elements;
-    @extend %component-size;
-    @extend %input-elements;
-}
+input { @extend %component-elements; @extend %input-elements; }
+input:focus, input.focus { outline: 0.1rem solid $green400; }
+input:out-of-range { outline: 0.1rem solid $red; }
 
-input::placeholder { color: $grey400; }
-input:focus { outline: none; border: 0.1rem solid $green400}
-input.invalid {
-    border: 0.1rem solid red;
+// Remove stepper
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 // Buttons
 #grid-selection {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: $sp-4;
-    padding: $sp-1 $sp-0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: $sp-4;
+  padding: $sp-1 $sp-0;
 }
 
 .btn {
-    border: none;
-    background-color: $green900;
-    color: $white;
-    @extend %component-elements;
-    @extend %component-size;
+  background-color: $green900;
+  border: none;
+  color: $white;
+  @extend %component-elements;
 }
 
-.btn:active {
-    background-color: $grey200;
-    color: $green900;
-}
+.btn.active, .reset:active { background-color: $grey200; color: $green900; }
 
 .reset {
-    background-color: $green400;
-    color: $green900;
-    font-size: $fs-md;
-    padding: $sp-2;
-    text-transform: uppercase;
-    width: 100%;
-}   
+  background-color: $green400;
+  color: $green900;
+  font-size: $fs-md;
+  padding: $sp-2;
+  text-transform: uppercase;
+  width: 100%;
+}
 
-// Output
+// Output container
 #output-container {
-    background-color: $green900;
-    border-radius: $br-xl;
-    font-size: $fs-xxl;
-    gap: $sp-4;
-    padding: $sp-5;
+  background-color: $green900;
+  border-radius: $br-xl;
+  font-size: $fs-xxl;
+  gap: $sp-4;
+  padding: $sp-5;
 }
 
 #output-text {
-    color: $green400;
-    gap: $sp-4;
-    padding: $sp-3 $sp-0;
+  color: $green400;
+  gap: $sp-4;
+  padding: $sp-3 $sp-0;
 }
 
-#output-text div {
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-span {
-    color: $grey400;
-    font-size: $fs-xs;
-}
-
-#output-container label {
-    color: $white;
-    font-size: $fs-sm;
-}
-
+#output-text div { flex-direction: row; justify-content: space-between; }
+#output-text span { color: $grey400; font-size: $fs-xs; }
+#output-container label { color: $white; font-size: $fs-sm; }
+#output-text output::before { content: "$"; }
 
 @media screen and (min-width: 48rem) {
   body {
@@ -164,27 +151,18 @@ span {
     gap: $sp-6;
   }
 
-  h1 {
-    margin: 2rem;
-  }
+  h1 { margin: $sp-6; }
 
-  #input-container {
-    padding: $sp-3;
-    width: 50%;
-  }
+  #input-container { padding: $sp-3; width: 50%; }
 
   #output-container {
-    width: 50%;
-    padding: $sp-6;
-    justify-content: space-between;
     font-size: $fs-xxl;
+    justify-content: space-between;
+    padding: $sp-6;
+    width: 50%;
   }
 
-  #grid-selection {
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  .btn, input {
-    cursor: pointer;
-  }
+  #grid-selection { grid-template-columns: repeat(3, 1fr); }
+  .btn, input { cursor: pointer; }
+  .btn:hover { background-color: $grey200; color: $green900; }
 }
