--- a/_colors.scss
+++ b/_colors.scss
@@ -5,3 +5,4 @@ $grey400: hsl(184, 14%, 56%);
 $grey200: hsl(185, 41%, 84%);
 $grey50: hsl(189, 47%, 97%);
 $white: hsl(0, 100%, 100%);
+$red: hsl(6.38, 72.73%, 56.86%);
