--- a/styles.scss
+++ b/styles.scss
@@ -161,6 +161,8 @@ input::-webkit-inner-spin-button {
     width: 50%;
   }
 
+   input:hover { outline: 0.1rem solid $green400; }
+
   #grid-selection { grid-template-columns: repeat(3, 1fr); }
   .btn, input { cursor: pointer; }
   .btn:hover { background-color: $grey200; color: $green900; }
