--- a/_typography.scss
+++ b/_typography.scss
@@ -1,7 +1,10 @@
-$fs-xs: 0.75rem; // 12px
-$fs-sm: 0.875rem; // 14px
+$fs-xxxs: 0.75rem; // 12px
+$fs-xxs: 0.813rem; // 13px
+$fs-xs: 0.875rem; // 14px
+$fs-sm: 0.938rem; // 15px
 $fs-base: 1rem; // 16px
 $fs-md: 1.125rem; // 18px
 $fs-lg: 1.25rem; // 20px
 $fs-xl: 1.5rem; // 24px
-$fs-xxl: 2rem; // 32px
+$fs-xxl: 1.75rem; // 28px
+$fs-xxxl: 2rem; // 32px
